# Donut

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  configure.sh  index.html  make.rb  params.json
cmake/: CMakeBuildSettings.cmake  CMakeCompiler.cmake  CMakeMacros.cmake  CMakePlatforms.cmake  FindGLEW.cmake  FindGLFW.cmake  FindSDL.cmake  Macros.cmake
data/geometry/: house.mtl
data/scenes/: teapotarmy.xml  test.xml
data/sugars/: darthvador.sugar  fsquad.sugar  fullscreenquad.sugar  house.sugar  lego.sugar  legoSH.sugar  legodude.sugar  lightbulb.sugar  plane.sugar  planeless.sugar  planemore.sugar  rabbit.sugar  soil.sugar  stormtrooper.sugar  teapot.sugar  tess.sugar  water.sugar
engine/src/: CMakelists.txt
include/windows/: jpeglib.h  picojson.h
program/: CMakeLists.txt  asset_compiler.cpp  bezierProgram.cpp  brdfReader.cpp  flour_loader.cpp  gpgpuRayTracer.cpp  marchingCube.cpp  objSerializer.cpp  realisticRendering.cpp  roofGeneration.cpp  wavefrontConverter.cpp
src/Animation/: Animation.cpp  Animation.h  AnimationEngine.cpp  AnimationEngine.h
src/Base/: Common.h  DebugPrinters.h  Singleton.h
src/Engine/: Defines.h  Engine.cpp  Engine.h  EngineExample.cpp  EngineExample.h
src/Input/: DefaultInputManager.cpp  DefaultInputManager.h  Defines.h  InputHelper.cpp  InputHelper.h  InputManager.cpp  InputManager.h
src/Math/: FloatN.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Vector3.cpp  Vector3.h  Vector4.cpp  helper.h  int.h  vec.cpp  vec.h
src/MultiThread/: Defines.h  ThreadSharedObject.cpp  ThreadSharedObject.h  UsualThreadSafeObjects.h
src/Objects/: Quad.cpp  Quad.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  skybox.h
src/Render/: Camera.cpp  Camera.h  Const.cpp  Const.h  Defines.h  DrawableObject.cpp  DrawableObject.h  FrameCanvas.cpp  FrameCanvas.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  Square.cpp  Square.h  SquareRepresentation.cpp  SquareRepresentation.h  collector.cpp  collector.h  common.h  helper.cpp  helper.h  light.cpp  light.h  node.cpp  node.h  scenenode.cpp  scenenode.h
src/StateEngine/: AtomicState.cpp  Defines.h  StateData.h  StateEngine.cpp  StateEngine.h  StateEngineManager.cpp  StateEngineManager.h  Transition.cpp  common.h
src/Texturing/: Texture.h  TextureHelpers.cpp  TextureHelpers.h  TextureManager.cpp  TextureManager.h
src/Tools/: FileLoader.cpp  FileLoader.h
src/base/: Common.h  Singleton.h  base_logger.cpp  baselogger.cpp  baselogger.h  const.h  exception.h  log.cpp  log.h  macro.h  platform.h  printers.h  security.cpp  security.h  stringhelper.cpp  stringhelper.h  types.h
src/butter/: const.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  staticvalues.cpp  stream.cpp  stream.h  types.h  vector2.h  vector2.ih  vector3.h  vector3.ih  vector3.inl  vector4.h  vector4.ih  vector4.inl
src/containers/: array.h  array.inl  dummy.cpp  string.cpp  string.h  vector.h  vector.inl
src/core/: box3.cpp  box3.h  camera.cpp  camera.h  common.h  flour.cpp  flour.h  frustum.cpp  frustum.h  mesh.cpp  mesh.h  node.cpp  node.h  scene.h  scenenode.cpp  scenenode.h  sugarinstance.cpp  sugarinstance.h
src/engine/: common.h  defines.h  engine.cpp  engine.h
src/graphics/: canvas.cpp  canvas.h  common.cpp  common.h  defferedfx.cpp  defferedfx.h  drawable.cpp  drawable.h  effectcanvas.cpp  effectcanvas.h  emptycanvas.cpp  emptycanvas.h  environmentfx.cpp  environmentfx.h  factory.cpp  factory.h  gbuffercanvas.cpp  gbuffercanvas.h  geometry.cpp  geometry.h  geometrypass.cpp  geometrypass.h  gl_backend.cpp  gl_backend.h  glfactory.cpp  glfactory.h  gpu_backend.cpp  gpu_backend.h  light.cpp  light.h  material.h  mesh.cpp  mesh.h  pass.h  pipeline.cpp  pipeline.h  settings.h  shader.cpp  shader.h  shaderdata.h  (+18 more)
src/input/: InputHelper.cpp  InputHelper.h  InputManager.cpp  InputManager.h  common.h  defaultinputmanager.cpp  defaultinputmanager.h  defines.h  helper.cpp  helper.h
src/math/: Matrix4.cpp  Matrix4.h  Vector4.h  const.h  helper.cpp  int.h
src/memory/: allocator.cpp  allocator.h  common.cpp  common.h  fallback_allocator.h  fallback_allocator.ih  null_allocator.cpp  null_allocator.h  system_allocator.cpp  system_allocator.h  systemallocator.cpp  systemallocator.h
src/multithread/: Defines.h  ThreadSharedObject.cpp  ThreadSharedObject.h  UsualThreadSafeObjects.h
src/objects/: skybox.cpp  skybox.h
src/recipe/: flourdescriptor.cpp  flourdescriptor.h  identifier.cpp  identifier.h  pipelinedescriptor.cpp  pipelinedescriptor.h  sugar_descriptor.cpp  sugar_descriptor.h  sugardescriptor.cpp  sugardescriptor.h  toppingdescriptor.cpp  toppingdescriptor.h
src/render/: Camera.cpp  Camera.h  Const.h  DrawableObject.cpp  DrawableObject.h  FrameCanvas.cpp  FrameCanvas.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  common.h  crumble_remover.cpp  crumble_remover.h  dispatcher.cpp  dispatcher.h  frsutum_culler.cpp  frustum_culler.cpp  frustum_culler.h  geometrypass.cpp  geometrypass.h  helper.cpp  helper.h  light.cpp  light.h  node.cpp  node.h  processor.h  render_request.cpp  render_request.h  scenenode.cpp
src/resource/: TextureHelpers.cpp  TextureHelpers.h  brdfhelpers.cpp  brdfhelpers.h  common.cpp  common.h  egg.cpp  egg.h  egghelpers.cpp  egghelpers.h  (+23 more)
test/: CMakeLists.txt  EngineExample1.cpp  EngineExample2.cpp  EngineExample2.h  EngineExample3.cpp  EngineExample4.cpp  EngineExample4.h  bezierProgram.cpp  engineexample1.cpp  engineexample1.h  nurbsProgram.cpp  testAllocators.cpp  testBRDFLoad.cpp  testDOF.cpp  testDefferedLight.cpp  testDisplay.cpp  testFlourLoad.cpp  testFrameCanvas.cpp  testGBuffer.cpp  testInput.cpp  testLight.cpp  testMapPNT.cpp  testModelLoader.cpp  testModelToTexture.cpp  testMovingShapes.cpp  testMovingSquare.cpp  testMultiThreadRender.cpp  testObjLoad.cpp  testOutline.cpp  testRayTracer.cpp  testRenderToTexture.cpp  testRenderer.cpp  testRotatingCube.cpp  testSSAO.cpp  testSceneLoad.cpp  testSceneParse.cpp  testSkybox.cpp  testStateEngine.cpp  testTesselation.cpp  testvulkan.cpp
(+407 files in other folders)
